# secret-counter-vuejs-box

./: .gitignore  .gitpod.yml  .gitpod.yml.localsecret  .gitpod.yml.secretbox  .gitpod.yml.simple  Cargo.toml  Makefile  README.md
app/: .gitignore  README.md  frontend.ts  index.html  package.json  secretbox.ts
app/src/: App.vue  style.css
app/src/components/: Contents.vue  Guide.vue  SecretBox.vue  TopBar.vue
app/tutorial/: guide.md  setting-up-your-environment.md
app/tutorial/illustrations/: architecture.drawio
app/tutorial/solutions/: SecretBox.vue  SecretBox.vue.lesson  contract.rs  contract.rs.lesson
docs/: setting-up-your-environment.md  setting-up-your-gitpod-workspace.md
examples/: schema.rs
scripts/: create_secret_box.sh  localsecret_healthcheck.sh
tests/: README.md  integration.ts  package-lock.json  package.json  secretbox.ts
