[package]
name = "secret-counter-vuejs-box"
version = "0.1.0"
authors = ["laura <laura@secretchaingirl.io>"]
edition = "2021"
description = "Secret Box app for the simple counter contract"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

# [dev-dependencies]
cosmwasm-schema = "1.0.0"
